# discord-bot

./: .env.example  .envrc  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  flake.nix  fly.toml  pyproject.toml
.github/workflows/: ruff.yml
app/: __main__.py  bot.py  config.py  core.py  db.py  github.py  issues.py  setup.py  utils.py
app/components/: __init__.py  accept_invite.py  autoclose.py  close_help_post.py  docs.py  entity_mentions.py  message_filter.py  move_message.py
app/components/entity_mentions/: __init__.py  cache.py  discussions.py  fmt.py  integration.py  resolution.py
app/db/: __init__.py  connect.py  models.py  utils.py
app/features/: __init__.py  beta_waitlist.py  docs.py  entity_mentions.py  invites.py  issues.py  message_filter.py  mod.py  move_message.py  vouches.py
app/view/: __init__.py  bulk_invites.py  entity_mentions.py  github.py  mod.py  move_message.py  vouches.py
migrations/: env.py
migrations/versions/: 68042950fdc1_vouch_tracking.py  7351aa8b16db_initial_migration.py  771f389c001a_final_vouch_model_hopefully.py  887230bcc55f_vouches_store_rejection_reasons.py  f66337b3b44b_vouches_store_interaction_ids.py
nix/: devshell.nix  overlay.nix  package.nix  python-app.nix
