[project]
name = "ghostty-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mitchell Hashimoto", email = "m@mitchell.com" },
    { name = "trag1c", email = "trag1cdev@yahoo.com" },
]
dependencies = [
    "discord-py~=2.4",
    "githubkit~=0.12.4",
    "python-dotenv==1.0.1",
    "sentry-sdk>=2.3.1,<3",
]

[dependency-groups]
dev = ["ruff~=0.9.6"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM",
    "D",
    "FIX",
    "ANN401",
    "ISC001",
    "T201",
    "TD003",
    "PLR2004",
    "S",
]
mccabe.max-complexity = 20
pylint.max-branches = 15
pylint.max-returns = 15
